build/project/sgyt-prueba4-api/.argocd/service.yml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sgyt-prueba4-api
  name: sgyt-prueba4-api 
  namespace: backend

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sgyt-prueba4-api
