build/project/sgyt-prueba4-api/.argocd/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
  labels:
    chart: sgyt-prueba4-api
  name: sgyt-prueba4-api 
  namespace: backend

spec:
  rules:
  - host: srv-paulet.sgyt.local
    http:
      paths:
      - path: /ingress/80/api/prueba4/
        pathType: Prefix
        backend:
          serviceName: sgyt-prueba4-api 
          servicePort: 80
